--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "scripts": {},
+  "main": "index.js",
+  "scripts": {
+    "bundle": "webpack"
+  },
   "keywords": [],
   "author": "SedationH",
   "license": "ISC",
